tests/parser/fail/super-param-bin.som
"test:
failMessage:
  - contains: define
  - contains: super
"

SuperParamBin = (
  / super = ('rip')
)

